--- a/.github/workflows/27122_deploy.yml
+++ b/.github/workflows/27122_deploy.yml
@@ -2,8 +2,8 @@ name: deploy
 
 on:
   workflow_run:
-    workflows: ["Test"]
-    branches: [main]
+    workflows: ["test"]
+    branches: [master]
     types:
       - completed
 
