--- a/.github/workflows/27122_deploy.yml
+++ b/.github/workflows/27122_deploy.yml
@@ -13,14 +13,14 @@ jobs:
     if: github.event.workflow_run.conclusion == 'success'
 
     steps:
-      - name: Checkout code
+      - name: checkout
         uses: actions/checkout@v3
 
-      - name: Set Environment Variables
+      - name: enviroment
         run: |
-          echo "DOCKER_USERNAME=${{ secrets.USERNAME }}" >> $GITHUB_ENV
+          echo "USERNAME=${{ secrets.USERNAME }}" >> $GITHUB_ENV
           echo "ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }}" >> $GITHUB_ENV
           echo "GITHUB_SHA=${{ github.event.workflow_run.head_sha }}" >> $GITHUB_ENV
 
       - name: Build and Push Docker Image
-        run: ./zapakiraj_27126.sh
+        run: ./zapakiraj_27122.sh
