--- a/.github/workflows/27122_deploy.yml
+++ b/.github/workflows/27122_deploy.yml
@@ -11,16 +11,13 @@ jobs:
   deploy:
     runs-on: self-hosted
     if: github.event.workflow_run.conclusion == 'success'
-
     steps:
       - name: checkout
         uses: actions/checkout@v3
-
       - name: enviroment
         run: |
           echo "USERNAME=${{ secrets.USERNAME }}" >> $GITHUB_ENV
           echo "ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }}" >> $GITHUB_ENV
           echo "GITHUB_SHA=${{ github.event.workflow_run.head_sha }}" >> $GITHUB_ENV
-
-      - name: Build and Push Docker Image
+      - name: custom script
         run: ./zapakiraj_27122.sh
